@@ -19,6 +19,9 @@ Changes in Version 2.2-0
     essentially just calls file.copy() but facilitates finding supplement
     files that are available along with the .Rnw/.Rmd exercise files.
 
+  o In exams2nops() the argument 'blank' can now be a vector of length 2
+    with the number of blank pages before and after the extra "pages".
+
 
 Changes in Version 2.1-0
 
